--- a/platforms/ios/www/templates/browse.html
+++ b/platforms/ios/www/templates/browse.html
@@ -3,6 +3,11 @@
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
-    <h1>Browse</h1>
+    <div id="mapContainer"></div>
   </ion-content>
+
+  <div class="bar bar-footer">
+    <button class="button button-clear" ng-click="locateMe()">Locate Me</button>
+    <div class="title">Title</div>
+  </div>
 </ion-view>
