--- a/www/templates/browse.html
+++ b/www/templates/browse.html
@@ -1,6 +1,7 @@
 <ion-view title="Browse">
   <ion-nav-buttons side="left">
     <button menu-toggle="left"class="button button-icon icon ion-navicon"></button>
+    <button menu-toggle="right"class="button" ng-click="toggleLanguage()">{{ currentLanguage }}</button>
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div id="mapContainer"></div>
